--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
         </ul>
       </div>
     </nav>
+    <div class="container-fluid">
+
+      <div class="row">
+          <div class="col-*-*">
+              <img src="surya.jpg" alt="My image" class="img-fluid">
+            </div>
+            <div class="col-*-*">
+      <p>Surya Kanta Khilar</p>
+            </div>
+
+      </div>
+
+    </div>
     <section id="contact">
         <div class="section-content">
           <h1 class="section-header">Get in <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Touch with us</span></h1>
