--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="row">
           <div class="col-*-*">
-              <img src="surya.jpg" alt="My image" class="img-fluid">
+              <img src="img/surya.jpg" alt="My image" class="img-fluid">
             </div>
             <div class="col-*-*">
       <p>Surya Kanta Khilar</p>
