add story and miner adjustment to image

--- a/index.html
+++ b/index.html
@@ -35,14 +35,45 @@
     <div class="container-fluid">
 
       <div class="row">
-          <div class="col-*-*">
-              <img src="img/surya.jpg" alt="My image" class="img-fluid">
+          <div class="col-sm-6 col-md-6 col-lg-6">
+              <img src="img/surya.jpg" alt="My image" 
+              class="img-fluid" width="240px" height="320px"
+              style="margin:15%;">
             </div>
-            <div class="col-*-*">
-      <p>Surya Kanta Khilar</p>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <h1 class="text-center" style="margin:25%;">
+                    "A WALK WITH ME"
+                  </h1>
             </div>
 
       </div>
+
+      <h2 class="text-center text-primary" style="
+      text-decoration:underline;">
+        My Story Begins Here</h2>
+
+        <h5>
+          Hello Everyone,
+        </h5>
+        <h5>My Story is as simple as a common Man in a society.I belongs to a middle 
+          class family. I have also a big dream to be successful person in my life. I have some planning to become a successful person.I am here to show you my path
+          of journey. I know you want to ask me why i am here to share my story 
+          . I am not sharing my story its a journey from failure to MySuccess .In this world There
+          are few persons who get success in their first attemt but there are a huge youth who
+          tastes failure in life path. They need inspirations like me and they can not share their thoughts
+          with Everyone some can not express their feelings to even their friends
+          so they get frustated and their dreams only true after they sleep.Those persons read the 
+          the success and failure stories from other persons life and reading biography. They read only the 
+          stories not all the things about them. For those i am sharing my story to read and to know what acctually happens in real life and facts about it. 
+          I am not sharing the failure of mine or the success i get, i am here share the path experiences during the journey of my success.
+          I am not a famous personality or may not be celebrity. I am just a common man and this is my life.
+          I will share my everyday journey day by day. May it will not be inspiring but i think this may help you in any point of your life.
+          I share my journey every day if you see that i am going in a wrong direction please guide me from your experience. It is neither success story nor 
+          a story of a failure its a jorney in our day today life . You can also share your experience from your life and inspire others . It may not help all people of earth but 
+          it may protect doing the same mistake again that you done and how you recover from that. for them please share your best jorney.
+          THANK you Everyone.....
+        </h5>
+       <h4>If you have a small time for me contact me for how can i reach to more people.</h4>
 
     </div>
     <section id="contact">
