design font added border

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="custom.css">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
       <!--- Include the above in your HEAD tag -->
 
 <link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
@@ -16,7 +17,7 @@
     </header>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
-      <a class="navbar-brand"style="color:white;">Surya</a>
+      <a class="navbar-brand"style="color:white;">Surya pvt. ltd.</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,7 +40,7 @@
       <div class="row">
           <div class="col-sm-6 col-md-6 col-lg-6">
               <img src="img/surya.jpg" alt="My image" 
-              class="img-fluid" width="240px" height="320px"
+              class="img-fluid rounded-circle" width="240px" height="320px"
               style="margin:15%;">
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
@@ -57,7 +58,7 @@
         <h5>
           Hello Everyone,
         </h5>
-        <h5>My Story is as simple as a common Man in a society.I belongs to a middle 
+        <p>My Story is as simple as a common Man in a society.I belongs to a middle 
           class family. I have also a big dream to be successful person in my life. I have some planning to become a successful person.I am here to show you my path
           of journey. I know you want to ask me why i am here to share my story 
           . I am not sharing my story its a journey from failure to MySuccess .In this world There
@@ -74,7 +75,7 @@
           a story of a failure its a jorney in our day today life . You can also share your experience from your life and inspire others . It may not help all people of earth but 
           it may protect doing the same mistake again that you done and how you recover from that. for them please share your best jorney.
           THANK you Everyone.....
-        </h5>
+        </p>
        <h4>If you have a small time for me contact me for how can i reach to more people.</h4>
 
     </div>
